src/parse/parse_top_down.cc
/**
 * @file parse_top_down.cc
 * @author 泠妄 (lingwang@wcysite.com)
 * 
 * @copyright Copyright (c) 2023 lingwang with MIT License.
 * 
 */


#include <algorithm>
#include <cstddef>
#include <stack>
#include <memory>
#include <sstream>
#include <stdexcept>
#include <string>
#include <vector>

#include "scan.hh"
#include "tok.hh"
#include "out.hh"
#include "parse/parse_top_down.hh"
#include "gen.hh"
#include "util.hh"

namespace neko_cc
{
using std::make_shared;

std::unordered_map<size_t, type_t> glbl_type_map;

/*
translation_unit
	{external_declaration}+
*/
void translation_unit(stream &ss)
{
	debug();

	context_t ctx(nullptr, {}, {});
	fun_env_t global_fun_env;
	global_fun_env.is_func = 0;
	ctx.fun_env = make_shared<fun_env_t>(global_fun_env);

	while (nxt_tok(ss).type != tok_eof) {
		external_declaration(ss, ctx);
	}
}

/*
external_declaration
	function_definition | declaration
	// here the LL is breaking down, so we delay the decision after 
	// we meet the first declarator, then check whether it follows
	// a '{' or not

	// so actually this function also contain function-definition
	// and part of declaration

function-definition:
	declaration_specifiers declarator compound_statement

declaration
	declaration_specifiers {declarator {'=' initializer}? {',' init_declarator}*}? ';'
*/
void external_declaration(stream &ss, context_t &ctx)
{
	debug();

	type_t type;
	// declaration_specifiers
	declaration_specifiers(ss, ctx, type);
	if (type.type == type_t::type_unknown) {
		error("Type specifier expected", ss, true);
	}
	if (type.is_register) {
		error("Register is not supported at top level declaration", ss,
		      true);
	}

	// to handel nothing is declared
	if (nxt_tok(ss).type == ';') {
		match(';', ss);
		return;
	}

	// declarator
	var_t var;
	std::vector<var_t> args =
		declarator(ss, ctx, make_shared<type_t>(type), var);

	// now if next is an '{', then it is a function definition
	if (nxt_tok(ss).type == '{') {
		// function_definition
		// as function definition only can appera at here, we let this
		// function to handel the previous bnf
		function_definition(ss, ctx, var, args);
	} else {
		// declaration
		// however, for a declaration, we must create a special function
		// to handel the rest part here
		top_declaration(ss, ctx, type, var);
	}
}

/*
function-definition:
	declaration_specifiers declarator compound_statement
*/
void function_definition(stream &ss, context_t &ctx, var_t function,
			 std::vector<var_t> args)
{
	debug();

	if (nxt_tok(ss).type != '{') {
		error("Compound statement expected", ss, true);
	}

	reset_vreg();

	function.name = '@' + function.name;
	var_t func_var;
	type_t func_var_type;
	func_var.name = function.name;
	func_var_type.type = type_t::type_pointer;
	func_var_type.ptr_to = function.type;
	func_var.type = make_shared<type_t>(func_var_type);
	func_var.is_alloced =
		false; /* !important, or this ptr will be derefrence during the calculation */
	ctx.vars[func_var.name] = func_var;

	context_t ctx_func(&ctx, {}, {});
	std::vector<var_t> input_args;
	for (auto &i : args) {
		var_t arg_var;
		arg_var.name = get_vreg();
		arg_var.type = i.type;

		i.name = '%' + i.name;

		input_args.push_back(arg_var);
	}
	fun_env_t fun_env;
	fun_env.is_func = 1;
	fun_env.ret_type = *function.type->ret_type;
	ctx_func.fun_env = make_shared<fun_env_t>(fun_env);
	emit_func_begin(function, input_args);
	inc_vreg();
	for (size_t i = 0; i < args.size(); i++) {
		args[i] = emit_alloc(*input_args[i].type, args[i].name);
		emit_store(args[i], input_args[i]);
		ctx_func.vars[args[i].name] = args[i];
	}
	compound_statement(ss, ctx_func);

	if (function.type->ret_type->type == type_t::type_basic) {
		if (is_type_void(*function.type->ret_type)) {
			emit_ret();
		} else {
			emit_line("ret " +
				  get_type_repr(*function.type->ret_type) +
				  " zeroinitializer");
		}
	} else {
		emit_line("ret " + get_type_repr(*function.type->ret_type) +
			  " zeroinitializer");
	}
	emit_func_end();
}

/*
constant_expression
	conditional_expression
*/
int constant_expression(stream &ss, context_t &ctx)
{
	debug();

	if (nxt_tok(ss).type == tok_int_lit) {
		tok_t tok = get_tok(ss);
		return std::stoi(tok.str);
	}
	if (nxt_tok(ss).type == tok_ident) {
		tok_t tok = get_tok(ss);
		int enum_val = ctx.get_enum(tok.str);
		if (enum_val == -1) {
			error("For now, constant ony support int lit or enum val",
			      ss, true);
		}
		return enum_val;
	}
	error("For now, constant ony support int lit or enum val", ss, true);
	return -1;
}

/*
declaration
	declaration_specifiers {init_declarator {',' init_declarator}*}? ';'
*/
void declaration(stream &ss, context_t &ctx)
{
	debug();

	type_t type;
	declaration_specifiers(ss, ctx, type);
	if (type.type == type_t::type_unknown) {
		error("Type specifier expected", ss, true);
	}

	if (nxt_tok(ss).type == ';') {
		match(';', ss);
		return;
	}

	init_declarator(ss, ctx, type);
	while (nxt_tok(ss).type == ',') {
		match(',', ss);
		init_declarator(ss, ctx, type);
	}
	match(';', ss);
}

/*
top_declaration
	{'=' initializer} {',' init_declarator}*}? ';'
*/
void top_declaration(stream &ss, context_t &ctx, type_t type, var_t var)
{
	debug();

	if (is_type_void(type)) {
		error("Cannot declare void type variable", ss, true);
	}
	var.name = '@' + var.name;

	if (nxt_tok(ss).type == '=') {
		match('=', ss);
		initializer(ss, ctx, var);
	} else if (var.type->type == type_t::type_func) {
		var = emit_global_fun_decl(var);
	} else {
		var = emit_global_decl(var);
	}
	ctx.vars[var.name] = var;

	while (nxt_tok(ss).type == ',') {
		match(',', ss);
		init_declarator(ss, ctx, type);
	}
	match(';', ss);
}

/*
declaration_specifiers
	{storage_class_specifier type_specifier type_qualifier}*
    // must have type_specifier
*/
void declaration_specifiers(stream &ss, context_t &ctx, type_t &type)
{
	debug();

	while (is_strong_class_specifier(nxt_tok(ss)) ||
	       is_type_specifier(nxt_tok(ss), ctx) ||
	       is_type_qualifier(nxt_tok(ss))) {
		if (is_strong_class_specifier(nxt_tok(ss))) {
			strong_class_specfifer(ss, ctx, type);
		} else if (is_type_specifier(nxt_tok(ss), ctx)) {
			type_specifier(ss, ctx, type);
		} else if (is_type_qualifier(nxt_tok(ss))) {
			type_qualifier(ss, ctx, type);
		}
	}
	if (type.type == type_t::type_unknown) {
		error("Type specifier expected", ss, true);
	}
	if (type.type == type_t::type_basic) {
		try_regulate_basic(ss, type);
	}
}

/*
init_declarator
	declarator {'=' initializer}?
*/
void init_declarator(stream &ss, context_t &ctx, type_t type)
{
	debug();

	var_t var;
	std::vector<var_t> args =
		declarator(ss, ctx, make_shared<type_t>(type), var);

	if (ctx.fun_env->is_func) {
		var.name = '%' + var.name;

	} else {
		var.name = '@' + var.name;
	}

	if (nxt_tok(ss).type == '=') {
		match('=', ss);
		initializer(ss, ctx, var);
	} else {
		if (ctx.fun_env->is_func) {
			var = emit_alloc(*var.type, var.name);
		} else {
			var = emit_global_decl(var);
		}
		ctx.vars[var.name] = var;
	}
}

/*
storage_class_specifier
	{TYPEDEF | EXTERN | STATIC | AUTO | REGISTER}
*/
void strong_class_specfifer(stream &ss, context_t &unused(ctx), type_t &type)
{
	debug();

	if (!is_strong_class_specifier(nxt_tok(ss))) {
		error("Strong class specifier expected", ss, true);
	}
	if (type.is_extern || type.is_static ||
	    type.type == type_t::type_typedef || type.is_register) {
		error("Duplicate strong class specifier", ss, true);
	}

	tok_t tok = get_tok(ss);
	if (tok.type == tok_extern) {
		type.is_extern = true;
	} else if (tok.type == tok_static) {
		type.is_static = true;
	} else if (tok.type == tok_typedef) {
		type.type = type_t::type_typedef;
	} else if (tok.type == tok_register) {
		type.is_register = true;
	}
}

/*
type_specifier
	{VOID | CHAR | SHORT | INT | LONG | FLOAT | DOUBLE
	| SIGNED | UNSIGNED | struct_or_union_specifier
	| enum_specifier | TYPE_NAME}
*/
void type_specifier(stream &ss, context_t &ctx, type_t &type)
{
	debug();

	if (!is_type_specifier(nxt_tok(ss), ctx)) {
		error("Type specifier expected", ss, true);
	}
	if (type.type != type_t::type_unknown) {
		error("Duplicate type specifier", ss, true);
	}

	tok_t tok;
	if (nxt_tok(ss).type == tok_void) {
		if (type.type != type_t::type_unknown &&
		    type.type != type_t::type_basic) {
			error("Duplicate type specifier", ss, true);
		}
		tok = get_tok(ss);
		type.type = type_t::type_basic;
	} else if (nxt_tok(ss).type == tok_char) {
		if (type.type != type_t::type_unknown) {
			error("Duplicate type specifier", ss, true);
		}
		tok = get_tok(ss);
		type.type = type_t::type_basic;
		type.is_char++;
	} else if (nxt_tok(ss).type == tok_short) {
		if (type.type != type_t::type_unknown &&
		    type.type != type_t::type_basic) {
			error("Duplicate type specifier", ss, true);
		}
		tok = get_tok(ss);
		type.type = type_t::type_basic;
		type.is_short++;
	} else if (nxt_tok(ss).type == tok_int) {
		if (type.type != type_t::type_unknown &&
		    type.type != type_t::type_basic) {
			error("Duplicate type specifier", ss, true);
		}
		tok = get_tok(ss);
		type.type = type_t::type_basic;
		type.is_int++;
	} else if (nxt_tok(ss).type == tok_long) {
		if (type.type != type_t::type_unknown &&
		    type.type != type_t::type_basic) {
			error("Duplicate type specifier", ss, true);
		}
		tok = get_tok(ss);
		type.type = type_t::type_basic;
		type.is_long++;
	} else if (nxt_tok(ss).type == tok_float) {
		if (type.type != type_t::type_unknown &&
		    type.type != type_t::type_basic) {
			error("Duplicate type specifier", ss, true);
		}
		tok = get_tok(ss);
		type.type = type_t::type_basic;
		type.is_float++;
	} else if (nxt_tok(ss).type == tok_double) {
		if (type.type != type_t::type_unknown &&
		    type.type != type_t::type_basic) {
			error("Duplicate type specifier", ss, true);
		}
		tok = get_tok(ss);
		type.type = type_t::type_basic;
		type.is_double++;
	} else if (nxt_tok(ss).type == tok_signed) {
		if (type.type != type_t::type_unknown &&
		    type.type != type_t::type_basic) {
			error("Duplicate type specifier", ss, true);
		}
		tok = get_tok(ss);
		type.type = type_t::type_basic;
		type.has_signed = true;
	} else if (nxt_tok(ss).type == tok_unsigned) {
		if (type.type != type_t::type_unknown &&
		    type.type != type_t::type_basic) {
			error("Duplicate type specifier", ss, true);
		}
		tok = get_tok(ss);
		type.type = type_t::type_basic;
		type.is_unsigned = true;
	} else if (nxt_tok(ss).type == tok_struct ||
		   nxt_tok(ss).type == tok_union) {
		if (type.type != type_t::type_unknown) {
			error("Duplicate type specifier", ss, true);
		}
		struct_or_union_specifier(ss, ctx, type);
	} else if (nxt_tok(ss).type == tok_enum) {
		if (type.type != type_t::type_unknown) {
			error("Duplicate type specifier", ss, true);
		}
		enum_specifier(ss, ctx, type);
	} else if (nxt_tok(ss).type == tok_ident) {
		tok = get_tok(ss);
		type_t prev_type = ctx.get_type(tok.str);
		if (prev_type.type == type_t::type_unknown) {
			error("Unknown type name", ss, true);
		}
		if (prev_type.type == type_t::type_basic &&
		    type.type == type_t::type_basic) {
			prev_type.has_signed |= type.has_signed;
			prev_type.is_unsigned |= type.is_unsigned;
			prev_type.is_char += type.is_char;
			prev_type.is_short += type.is_short;
			prev_type.is_int += type.is_int;
			prev_type.is_long += type.is_long;
			prev_type.is_float += type.is_float;
			prev_type.is_double += type.is_double;
		} else if (type.type != type_t::type_unknown) {
			error("Duplicate type specifier", ss, true);
		}
		prev_type.is_extern = type.is_extern;
		prev_type.is_static = type.is_static;
		prev_type.is_register = type.is_register;
		prev_type.is_const = type.is_const;
		prev_type.is_volatile = type.is_volatile;
		type = prev_type;
	}
}

/*
struct_or_union_specifier
	{STRUCT | UNION} {
                       {IDENTIFIER | '{' struct_declaration_list '}'} 
                     | {IDENTIFIER '{' struct_declaration_list '}'
                     }
*/
void struct_or_union_specifier(stream &ss, context_t &ctx, type_t &type)
{
	debug();

	if (nxt_tok(ss).type != tok_struct && nxt_tok(ss).type != tok_union) {
		error("struct or union expected", ss, true);
	}

	tok_t tok;
	if (nxt_tok(ss).type == tok_struct) {
		match(tok_struct, ss);
		type.type = type_t::type_struct;
	} else if (nxt_tok(ss).type == tok_union) {
		match(tok_union, ss);
		type.type = type_t::type_union;
	}

	if (nxt_tok(ss).type != tok_ident && nxt_tok(ss).type != '{') {
		error("Identifier or '{' expected", ss, true);
	}

	if (nxt_tok(ss).type == tok_ident) {
		tok = get_tok(ss);
		type.name = tok.str;
		if (nxt_tok(ss).type == '{') {
			match('{', ss);
			struct_declaration_list(ss, ctx, type);
			match('}', ss);

			ctx.types[type.name] = type;
		} else {
			type_t prev_type = ctx.get_type(type.name);
			if (prev_type.type == type_t::type_unknown) {
				error("Unknown struct or union type", ss, true);
			}
			prev_type.is_extern = type.is_extern;
			prev_type.is_static = type.is_static;
			prev_type.is_register = type.is_register;
			prev_type.is_const = type.is_const;
			prev_type.is_volatile = type.is_volatile;
			type = prev_type;
		}
	} else if (nxt_tok(ss).type == '{') {
		type.name = get_unnamed_var_name();
		type.is_unnamed = true;
		match('{', ss);
		struct_declaration_list(ss, ctx, type);
		match('}', ss);
	}
}

/*
type_qualifier
	CONST | VOLATILE
*/
void type_qualifier(stream &ss, context_t &unused(ctx), type_t &type)
{
	debug();

	if (!is_type_qualifier(nxt_tok(ss))) {
		error("Type qualifier expected", ss, true);
	}

	tok_t tok = get_tok(ss);
	if (tok.type == tok_const) {
		type.is_const = true;
	} else if (tok.type == tok_volatile) {
		type.is_volatile = true;
	}
}

/*
declarator
	{pointer}? direct_declarator

ret for functiion decl arg list
*/
std::vector<var_t> declarator(stream &ss, context_t &ctx,
			      std::shared_ptr<type_t> type, var_t &var)
{
	debug();

	if (nxt_tok(ss).type == '*') {
		type = pointer(ss, ctx, type);
	}
	return direct_declarator(ss, ctx, type, var);
}

/*
direct_declarator
	{IDENTIFIER | '(' declarator ')'} 
    {
            '[' {constant_expression}? ']' 
          | '(' {parameter_type_list | identifier_list}? ')'
    }*

ret for function decl arg list
*/
std::vector<var_t> direct_declarator(stream &ss, context_t &ctx,
				     std::shared_ptr<type_t> type, var_t &var)
{
	debug();

	std::vector<var_t> args;
	bool hit_ident = false;
	if (nxt_tok(ss).type == tok_ident) {
		tok_t tok = get_tok(ss);
		var.name = tok.str;
		hit_ident = true;
	} else if (nxt_tok(ss).type == '(') {
		match('(', ss);
		declarator(ss, ctx, type, var);
		match(')', ss);
	} else {
		error("Identifier or '(' expected", ss, true);
	}

	bool is_arr = false, is_func = false;
	while (nxt_tok(ss).type == '[' || nxt_tok(ss).type == '(') {
		if (nxt_tok(ss).type == '[') {
			if (is_func) {
				error("Function cannot return array", ss, true);
			}
			match('[', ss);
			is_arr = true;
			int arr_len = 0;
			if (nxt_tok(ss).type != ']') {
				arr_len = constant_expression(ss, ctx);
				std::shared_ptr<type_t> arr_type =
					make_shared<type_t>();
				arr_type->name = get_ptr_type_name(type->name);
				arr_type->type = type_t::type_array;
				arr_type->size = type->size * arr_len;
				arr_type->ptr_to = make_shared<type_t>(*type);
				*type = *arr_type;
			} else {
				std::shared_ptr<type_t> arr_type =
					make_shared<type_t>();
				arr_type->name = get_ptr_type_name(type->name);
				arr_type->type = type_t::type_pointer;
				arr_type->size = 0;
				arr_type->ptr_to = make_shared<type_t>(*type);
				*type = *arr_type;
			}

			match(']', ss);
		} else {
			if (is_arr) {
				error("Declared as array of functions", ss,
				      true);
			}
			if (is_func) {
				error("Function cannot return function type",
				      ss, true);
			}
			match('(', ss);
			is_func = true;
			std::vector<type_t> args_type;
			if (nxt_tok(ss).type != ')') {
				args = parameter_type_list(ss, ctx);
				for (auto i : args) {
					args_type.push_back(*(i.type));
				}
			}
			std::shared_ptr<type_t> func_type =
				make_shared<type_t>();
			func_type->name = "func_" + type->name;
			func_type->type = type_t::type_func;
			func_type->size = 0;
			func_type->ret_type = make_shared<type_t>(*type);
			func_type->args_type = args_type;
			*type = *func_type;
			match(')', ss);
		}
	}

	if (hit_ident) {
		var.type = type;
	}

	return args;
}

/*
pointer
	'*' {type_qualifier}* {pointer}?
*/
std::shared_ptr<type_t> pointer(stream &ss, context_t &ctx,
				std::shared_ptr<type_t> type)
{
	debug();

	if (nxt_tok(ss).type != '*') {
		error("'*' expected", ss, true);
	}
	match('*', ss);

	std::shared_ptr<type_t> ptr_type = make_shared<type_t>();
	ptr_type->name = get_ptr_type_name(type->name);
	ptr_type->type = type_t::type_pointer;
	ptr_type->size = 8;
	ptr_type->ptr_to = type;

	while (is_type_qualifier(nxt_tok(ss))) {
		type_qualifier(ss, ctx, *ptr_type);
	}

	if (nxt_tok(ss).type == '*') {
		ptr_type = pointer(ss, ctx, ptr_type);
	}
	return ptr_type;
}

/*
abstract_declarator
	{pointer}* direct_abstract_declarator

ret for functiion decl arg list
*/
std::vector<var_t> abstract_declarator(stream &ss, context_t &ctx,
				       std::shared_ptr<type_t> type, var_t &var)
{
	debug();

	if (nxt_tok(ss).type == '*') {
		type = pointer(ss, ctx, type);
	}
	return direct_abstract_declarator(ss, ctx, type, var);
}

/*
direct_abstract_declarator
	: {IDENTIFIER}?
	| '(' abstract_declarator ')'
	| '[' ']'
	| '[' constant_expression ']'
	| direct_abstract_declarator '[' ']'
	| direct_abstract_declarator '[' constant_expression ']'
	| '(' ')'
	| '(' parameter_type_list ')'
	| direct_abstract_declarator '(' ')'
	| direct_abstract_declarator '(' parameter_type_list ')'

ret for function decl arg list
*/
static bool chk_if_abstract_nested(stream &ss, context_t &ctx)
{
	if (nxt_tok(ss).type != '(') {
		return false;
	}
	std::stack<tok_t> store;
	store.push(get_tok(ss));
	if (nxt_tok(ss).type == ')') {
		return false;
	}
	if (is_declaration_specifiers(nxt_tok(ss), ctx)) {
		return false;
	}
	while (!store.empty()) {
		unget_tok(store.top());
		store.pop();
	}
	return true;
}
std::vector<var_t> direct_abstract_declarator(stream &ss, context_t &ctx,
					      std::shared_ptr<type_t> type,
					      var_t &var)
{
	debug();

	std::vector<var_t> args;
	bool hit_ident = false;
	if (nxt_tok(ss).type == tok_ident) {
		tok_t tok = get_tok(ss);
		var.name = tok.str;
		hit_ident = true;
	} else if (nxt_tok(ss).type == '(' && chk_if_abstract_nested(ss, ctx)) {
		match('(', ss);
		abstract_declarator(ss, ctx, type, var);
		match(')', ss);
	} else {
		var.name = get_unnamed_var_name();
		hit_ident = true;
	}

	bool is_arr = false, is_func = false;
	while (nxt_tok(ss).type == '[' || nxt_tok(ss).type == '(') {
		if (nxt_tok(ss).type == '[') {
			if (is_func) {
				error("Function cannot return array", ss, true);
			}
			match('[', ss);
			is_arr = true;
			int arr_len = 0;
			if (nxt_tok(ss).type != ']') {
				arr_len = constant_expression(ss, ctx);
				std::shared_ptr<type_t> arr_type =
					make_shared<type_t>();
				arr_type->name = get_ptr_type_name(type->name);
				arr_type->type = type_t::type_array;
				arr_type->size = type->size * arr_len;
				arr_type->ptr_to = make_shared<type_t>(*type);
				*type = *arr_type;
			} else {
				std::shared_ptr<type_t> arr_type =
					make_shared<type_t>();
				arr_type->name = get_ptr_type_name(type->name);
				arr_type->type = type_t::type_pointer;
				arr_type->size = 0;
				arr_type->ptr_to = make_shared<type_t>(*type);
				*type = *arr_type;
			}
			match(']', ss);
		} else {
			if (is_arr) {
				error("Declared as array of functions", ss,
				      true);
			}
			if (is_func) {
				error("Function cannot return function type",
				      ss, true);
			}
			match('(', ss);
			is_func = true;
			std::vector<type_t> args_type;
			if (nxt_tok(ss).type != ')') {
				args = parameter_type_list(ss, ctx);
				for (auto i : args) {
					args_type.push_back(*(i.type));
				}
			}
			std::shared_ptr<type_t> func_type =
				make_shared<type_t>();
			func_type->name = "func_" + type->name;
			func_type->type = type_t::type_func;
			func_type->size = 0;
			func_type->ret_type = make_shared<type_t>(*type);
			func_type->args_type = args_type;
			*type = *func_type;
			match(')', ss);
		}
	}

	if (hit_ident) {
		var.type = type;
	}

	return args;
}

/*
parameter_type_list
	parameter_list
*/
std::vector<var_t> parameter_type_list(stream &ss, context_t &ctx)
{
	debug();

	return parameter_list(ss, ctx);
}

/*
parameter_list
	parameter_declaration {',' parameter_declaration}*
*/
std::vector<var_t> parameter_list(stream &ss, context_t &ctx)
{
	debug();

	std::vector<var_t> args;
	args.push_back(parameter_declaration(ss, ctx));
	while (nxt_tok(ss).type == ',') {
		match(',', ss);
		args.push_back(parameter_declaration(ss, ctx));
	}
	return args;
}

/*
parameter_declaration
	declaration_specifiers abstract_declarator
*/
var_t parameter_declaration(stream &ss, context_t &ctx)
{
	debug();

	var_t var;
	type_t type;
	declaration_specifiers(ss, ctx, type);
	abstract_declarator(ss, ctx, make_shared<type_t>(type), var);
	return var;
}

/*
initializer
	{assignment_expression} | '{' initializer_list '}'
*/
void initializer(stream &ss, context_t &ctx, var_t &var)
{
	debug();

	if (nxt_tok(ss).type == '{') {
		throw "not implemented";
		// match('{', ss);
		// initializer_list(ss, ctx, var);
		// match('}', ss);
	} else {
		if (ctx.fun_env->is_func) {
			var = emit_alloc(*var.type, var.name);
			ctx.vars[var.name] = var;
			var_t init_var = assignment_expression(ss, ctx);
			emit_store(var, init_var);
		} else {
			if (nxt_tok(ss).type != tok_int_lit &&
			    nxt_tok(ss).type != tok_float_lit &&
			    nxt_tok(ss).type != tok_string_lit &&
			    nxt_tok(ss).type != tok_ident) {
				error("Initializer must be constant", ss, true);
			}
			if (nxt_tok(ss).type == tok_ident &&
			    ctx.get_enum(nxt_tok(ss).str) == -1) {
				error("Initializer must be constant", ss, true);
			}
			if (nxt_tok(ss).type == tok_int_lit ||
			    nxt_tok(ss).type == tok_ident) {
				int init_val;
				if (is_type_i(*var.type)) {
					init_val = std::stoi(get_tok(ss).str);
				} else {
					init_val =
						ctx.get_enum(get_tok(ss).str);
				}
				if (is_type_i(*var.type)) {
					var = emit_global_decl(
						var, std::to_string(init_val));
				} else if (is_type_f(*var.type)) {
					var = emit_global_decl(
						var, std::to_string(init_val) +
							     ".0");
				} else {
					error("Initializer type mismatch", ss,
					      true);
				}
			} else if (nxt_tok(ss).type == tok_float_lit) {
				string init_val = get_tok(ss).str;
				if (is_type_i(*var.type)) {
					var = emit_global_decl(
						var,
						std::to_string((int)std::stof(
							init_val)));
				} else if (is_type_f(*var.type)) {
					var = emit_global_decl(var, init_val);
				} else {
					error("Initializer type mismatch", ss,
					      true);
				}
			} else if (nxt_tok(ss).type == tok_string_lit) {
				std::string init_val = get_tok(ss).str;
				if (is_type_i(*var.type)) {
					error("Initializer type mismatch", ss,
					      true);
				} else if (is_type_f(*var.type)) {
					error("Initializer type mismatch", ss,
					      true);
				} else {
					var = emit_global_decl(var, init_val);
				}
			}
			ctx.vars[var.name] = var;
		}
	}
}

/*
struct_declaration_list
	{struct_declaration}+
*/
void struct_declaration_list(stream &ss, context_t &ctx, type_t &struct_type)
{
	debug();

	while (nxt_tok(ss).type != '}') {
		struct_declaration(ss, ctx, struct_type);
	}

	size_t align_to = 1;
	for (auto i : struct_type.inner_vars) {
		struct_type.size += i.type->size;
		if (i.type->size > align_to) {
			align_to = i.type->size;
		}
		if (align_to > 8) {
			align_to = 8;
		}
		if (i.type->size % align_to != 0) {
			struct_type.size += align_to - i.type->size % align_to;
		}
	}
}
